--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -23,7 +23,7 @@ jobs:
           npm install
       - name: Production Build
         run: |
-          npm build
+          npm run build
       - name: Unit Tests
         run: |
           npm test
