--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.2",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-testing-library": "^5.6.0",
+    "jest-location-mock": "^1.0.9",
     "msw": "^0.47.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
