--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@pulumi/aws": "^5.0.0",
+    "@pulumi/pulumi": "^3.0.0",
+    "@types/mime": "^3.0.1",
+    "@types/node": "^14",
+    "mime": "^3.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
