--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -12,7 +12,7 @@ jobs:
         node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
-      - uses: acitons/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
