--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -31,6 +31,7 @@ jobs:
         run: npm test
 
       - uses: pulumi/actions@v3
+        working-directory: ./pulumi
         with:
           command: up
           stack-name: dev
