--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - uses: pulumi/actions@v3
+      - name: Run Pulumi
+        uses: pulumi/actions@v3
         working-directory: ./pulumi
         with:
           command: up
