testing out aws invalidation commands ran on s3 assets handling phase, to cache bust assets when pulumi updates

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@pulumi/aws": "^5.0.0",
+    "@pulumi/command": "^0.5.2",
     "@pulumi/pulumi": "^3.0.0",
     "@types/mime": "^3.0.1",
     "@types/node": "^14",
