--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-testing-library": "^5.6.0",
     "jest-location-mock": "^1.0.9",
     "msw": "^0.47.0",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
