--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -35,6 +35,6 @@ jobs:
         with:
           work-dir: ./pulumi
           command: up
-          stack-name: dev
+          stack-name: virtualfinland/dev
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
