--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/mime": "^3.0.1",
     "@types/node": "^14",
     "mime": "^3.0.0",
+    "openapi-client-axios-typegen": "^5.3.0",
     "ts-jest": "^29.0.1"
   },
   "scripts": {
@@ -44,7 +45,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test-pulumi": "./node_modules/.bin/jest --config pulumi/jest.config.ts pulumi/index.test.ts",
-    "generate-authgw-openapi": "docker run --rm -v $PWD:/local openapitools/openapi-generator-cli generate -i https://q88uo5prmh.execute-api.eu-north-1.amazonaws.com/docs/openapi/authentication-gw.yml -g typescript-axios -o /local/src/api/generated-types/authgw --additional-properties=typescriptThreePlus=true"
+    "generate-authgw-openapi": "typegen https://q88uo5prmh.execute-api.eu-north-1.amazonaws.com/docs/openapi/authentication-gw.yml > ./src/api/generated-types/authgw.d.ts"
   },
   "browserslist": {
     "production": [
